cleanup ContUtil: more tests
GitOrigin-RevId: c44ce8d98744f45bd31515c0591e83e32381ea07